# town-embeddings

./: pyproject.toml
chebai_towns/loss/: town_loss.py
chebai_towns/models/: town_model.py
chebai_towns/towns/: geometry.py  shape.py
configs/: loss.yml  model.yml
docs/: conenet.ipynb  geonet.ipynb  test.ipynb
potemkin/io/: render.py
potemkin/loss/: town_loss.py
potemkin/models/: town_model.py
potemkin/towns/: geometry.py  shape.py
